/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;
import "google/protobuf/timestamp.proto";

message Notification {
    string id = 1;
    string nodeId = 2 [json_name = "node_id"];
    string nodeType = 3 [json_name = "node_type"];
    string severity = 4;
    string type = 5;
    string serviceName = 6 [json_name = "service_name"];
    uint32 status = 7;
    uint32 time = 8 [json_name = "time"];
    bytes details = 9;
    google.protobuf.Timestamp createdAt = 10 [json_name = "created_at"];
}

message NotificationDeletedEvent{
    string id = 1;
    string nodeId = 2 [json_name = "node_id"];
}

message NodeReadyEvent {
    string nodeId = 1;
    string name = 2;
    string status = 3;
    uint64 timestamp = 4;
    string details = 5;
}
message NodeUpdateEvent {
    string nodeId = 1;         // Identifier for the node
    string updateType = 2;    // Type of update (e.g., "Software", "Firmware")
    string updateVersion = 3; // Version of the update
    uint64 timestamp = 4;     // Time when the update occurred
    string details = 5;       // Additional details about the update
}
message NodeConfigEvent {
    string nodeId = 1;         
    string configName = 2;     
    uint64 timestamp = 3;     
    string details = 4;       
}
